# BE

./: .env  .python-version  pyproject.toml
.github/: .gitIgnore
apps/chat/: apps.py
apps/chat/migrations/: 0001_initial.py
apps/chat/models/: __init__.py  chat_room.py  message.py  study_group.py  user_profile.py
config/: asgi.py
config/settings/: base.py  local.py  prod.py
envs/: .env.prod
